# TriceraDrive-API

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  main.py  pyproject.toml
app/: auth.py  config.py  database.py  exceptions.py
app/adapters/: base.py  mega.py
app/routers/: accounts.py  auth.py  files.py  settings.py  sync.py
app/schemas/: account.py  file.py  sync.py
app/services/: account.py  file.py  scheduler.py  sync.py
app/utils/: encryption.py  logging.py
